# pixiv_scraper

./: .gitignore  README.md  data.csv  name.csv  pyproject.toml  tags.csv  uma.csv
src/pixiv_scraper/: __init__.py  bcr.py  count_tags.py  scrape.py
