[project]
name = "pixiv-scraper"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Gitdmnt", email = "100859051+gitdmnt@users.noreply.github.com" }
]
dependencies = [
    "requests~=2.32.3",
    "pandas~=2.2.3",
    "bar_chart_race~=0.1.0",
    "japanize-matplotlib~=1.1.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
